src/App.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@import url("https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&display=swap");

.App {
  text-align: center;
  font-family: "Fredoka";
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

.game-input {
  @apply w-full h-16 text-center border-black border-solid rounded-md border outline-0;
}

.game-input:focus {
  @apply border-customYellow;
}

.playedCardButton {
  @apply bg-customYellow text-black font-semibold w-full h-full rounded-3xl text-2xl;
}

.winnerButton {
  @apply bg-customRed text-black font-semibold w-4/5 h-4/5 rounded-2xl mt-3;
}

.resetButton {
  @apply bg-customLightBlue text-black font-semibold w-4/5 h-4/5 rounded-2xl mt-3;
}

.button {
  @apply font-semibold text-black w-24;
}

.event-area {
  opacity: 0;
  transition: opacity 0.5s ease-in-out;
}

.player-area {
  opacity: 0;
  transition: opacity 0.5s ease-in-out 1s;
}

.instruction-area {
  opacity: 0;
  transition: opacity 0.5s ease-in-out 2s;
}

.next-player-area {
  opacity: 0;
  transition: opacity 0.5s ease-in-out 3s;
}

.event-area.show-event,
.player-area.show-players-involved,
.instruction-area.show-instructions,
.next-player-area.show-next-player,
.event-area.show-score-board {
  opacity: 1;
}

tr th {
  @apply font-semibold;
}

body {
  orientation: portrait;
}

